# rust_study

./: Cargo.toml
src/: hashmapT.rs  httpT.rs  intoT.rs  into_from_test.rs  main.rs  optionT.rs  sliceT.rs  (+9 more)
src/actix_web_project/mockrs/: .env  .gitignore  Cargo.toml  db.json
src/actix_web_project/mockrs/src/: api.rs  db.rs  main.rs  opt.rs
src/book_study_notes/book01_the_tao_of_programming/: Cargo.toml
src/book_study_notes/book01_the_tao_of_programming/src/: main.rs
src/book_study_notes/book01_the_tao_of_programming/src/c02_basic/: mod.rs  t2_3_variable_and_binding.rs  t2_5_1_if_for_while.rs  t2_5_3_match.rs  t2_6_0_data_type.rs  t2_7_2_struct.rs  t2_9_0_smart_pointer.rs
src/book_study_notes/book01_the_tao_of_programming/src/c02_outline/: mod.rs  t2_13_0_documentation_comments.rs  t2_4_1_function.rs  t2_4_5_closure.rs  t2_6_0_data_type.rs  t2_7_1_tuple.rs  t2_7_2_struct.rs  t2_7_3_enum.rs
src/book_study_notes/book01_the_tao_of_programming/src/c03_type_system/: mod.rs  t3_2_1_type_size.rs  t3_2_2_type_infer.rs  t3_3_2_returned_infer.rs  t3_4_1_trait_interface.rs  t3_4_2_trait_generic_limit.rs  t3_4_3_trait_abstract_type.rs  t3_4_4_trait_marker.rs
src/book_study_notes/book01_the_tao_of_programming/src/c04_memory_manage/: mod.rs  t4_1_1_stack.rs
src/book_study_notes/book01_the_tao_of_programming/src/c05_ownership/: mod.rs  t5_1_0_ownership.rs  t5_3_0_let_scope_lifetime.rs  t5_4_0_borrow.rs  t5_5_0_lifetime_parameter.rs  t5_6_0_smart_pointer.rs
src/book_study_notes/book01_the_tao_of_programming/src/c06_function_closure_iterator/: mod.rs  t6_1_0_function.rs  t6_1_5_method.rs  t6_1_6_high_level_function.rs  t6_2_0_closure.rs  t6_3_0_iterator.rs  t6_3_4_iterator_adaptor.rs  t6_3_4_iterator_adaptor_consumer.rs
src/book_study_notes/book01_the_tao_of_programming/src/c07_structured_programming/: mod.rs  t7_1_0_oop.rs  t7_1_1_struct_color.rs  t7_1_2_enum_color.rs  t7_2_0_design_mode.rs
src/book_study_notes/book01_the_tao_of_programming/src/c08_string_and_collection/: mod.rs  t8_1_0_stirng.rs  t8_1_1_char.rs  t8_1_4_string_handling.rs  t8_1_8_sum_of_diagonals.rs  t8_2_0_collection.rs  t8_2_1_vec.rs  t8_2_2_map.rs
src/book_study_notes/book01_the_tao_of_programming/src/c08_string_and_collections/: mod.rs  t8_1_0_stirng.rs  t8_1_4_string_handling.rs  t8_1_8_sum_of_diagonals.rs  t8_2_1_vec.rs  t8_2_2_map.rs
src/book_study_notes/book01_the_tao_of_programming/src/c09_panic_handle/: mod.rs  t9_1_0_intro.rs  t9_3_1_option.rs  t9_3_2_result.rs  t9_5_0_third_party_libraries.rs
src/book_study_notes/book01_the_tao_of_programming/src/c10_modularization_programming/: readme.md
src/book_study_notes/book01_the_tao_of_programming/src/c10_modularization_programming/t10_3_0_csv_challenge/: Cargo.toml  readme.md
src/book_study_notes/book01_the_tao_of_programming/src/c10_module/t10_3_0_csv_challenge/: Cargo.toml  readme.md
src/book_study_notes/book01_the_tao_of_programming/src/c11_concurrence/: mod.rs  t11_1_0_general_concepts.rs  t11_2_0_multithreading.rs  t11_2_1_thread_management.rs  t11_2_2_send_sycn.rs  t11_2_3_lock.rs  t11_2_4_barrier_condition_variable.rs  t11_2_5_atomic.rs  t11_2_6_channel.rs  t11_2_7_unsafecell.rs  t11_3_0_async.rs  t11_3_1_generator.rs
src/command_project/yangtool/: Cargo.toml  readme.md
src/command_project/yangtool/src/: api.rs  main.rs  opt.rs
(+211 files in other folders)
