[package]
name = "rust_study"
version = "0.1.0"
authors = ["yangyang <ofyang@qq.com>"]
edition = "2018"

[dependencies]
#for http request
reqwest = "0.9.19"

#for web server
#iron = "0.6.1"
router = "0.6.0"

#json lib
serde_json = "1.0.40"
serde = "1.0.99"

http_req = "0.5.3"
lazy_static = "1.3.0"

#actor future
futures = "0.1.29"
#futures = "0.3.1"
tokio-core = "0.1.17"

#datetime lib
chrono = "0.4.7"
time = "0.1"
async-std = "1.2.0"