[package]
name = "rust_study"
version = "0.2.0"
authors = ["yangyang <ofyang@qq.com>"]
edition = "2018"

#可选项 声明工作空间并增加成员
#如果需要创建多个项目，且分割依赖，但又想在同一个工作空间下维护时，可以配置workspace
#只需在[workspace]下配置成员路径，在成员的Cargo.toml中配置workspace的路径即可完成关联。
#整个工作空间只有一个Cargo.lock，在工作空间的根目录
#整个工作空间只有一个target，在工作空间的根目录
[workspace]
members=[
"src/b03_web_server/study_iron",
"src/b02_async_study/b03_book_async_rs",
"src/b02_async_study/b03_t3_chatroom",
"src/b02_async_study/futures_study_v016",
"src/b02_async_study/b02_async_book",
"src/http_client/study_http_req",
"src/http_client/study_reqwest",
"src/b01_the_tao_of_programming/c10_module/t10_3_0_csv_challenge",
"src/b01_the_tao_of_programming/c11_concurrence/t11_2_6_proof_of_work",
"src/b01_the_tao_of_programming/c11_concurrence/t11_2_8_thread_pool",
"src/log_lib/l01_env_logger",
"src/actix_web_project/mockrs",
"src/command_project/yangtool",
]

[dependencies]


lazy_static = "1.3.0"

#error lib
failure = "0.1.6"
failure_derive = "0.1.6"

#json lib
serde_json = "1.0.40"
serde = "1.0.99"

rand="0.7.2"