[package]
name = "book01_the_tao_of_programming"
version = "0.1.0"
authors = ["杨洋(yangyang) <ofyang@qq.com>"]
edition = "2018"
description = "《Rust编程之道》学习笔记"
workspace = "../../.."

[dependencies]
lazy_static = "1.3.0"

#error lib
failure = "0.1.6"
failure_derive = "0.1.6"

#json lib
serde_json = "1.0.40"
serde = "1.0.99"

rand = "0.7.2"