# 基于 actix-web2.0 structopt json 构建的微服务
# 本项目包含 structopt 命令行参数库使用的详解
# 本项目可以将一个json文件作为本地数据库存储进行操作，通过http请求访问或修改json中的任意数据。
[package]
name = "yangtool"
version = "0.1.0"
authors = ["yangyang <ofyang@qq.com>"]
edition = "2018"
description = "这是一个命令行项目，用于快捷执行Linux常用命令"
workspace = "../../.."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#Project Github:https://github.com/PrivateRookie/mockrs


[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
structopt = "0.3.7"
